--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
     "ethers": "^5.0.24",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
